# NonLinLoc

./: .gitignore  CHANGE_NOTES.txt  README.md  Suarel_HYPOINVERSE_Y2000_ARC_patch.tgz  build_distribution_OUT_OF_DATE.bash  run_casc_grid.bash  run_nll_parallel.bash  run_tests.bash  xyzv2nllgrd.sh
src/: CMakeCache (Anthonys-iMac.local's conflicted copy 2021-07-17).txt  CMakeCache-2024-03-01-12-43-37.txt  CMakeCache_OLD.txt  CMakeLists.txt  Grid2GMT.c  Grid2GMT_OLD_GMT4.c  Grid2Time1.c  GridCascadingDecimate.c  GridCut.c  GridGraphLib.c  GridLib.c  GridMemLib.c  Loc2ddct.c  Loc2ssst.c  LocSum.c  Makefile  Makefile (Anthonys-iMac.local's conflicted copy 2021-07-17)  Makefile-2024-03-01-12-43-37  Makefile-NLLoc  Makefile.ORIG  NLDiffLoc.c  NLDiffLoc_OLD.c  NLLoc1.c  NLLoc1_JW.c  NLLocLib.c  NLLocLib_JW.c  NLLoc_func_test.c  NLLoc_main.c  PhsAssoc.c  Time2Angles1.c  Time2EQ1.c  Time_3d_NLL_multiSource.c  Vel2Grid1.c  Vel2Grid3D.c  bin  bin_debug  cmake_install (Anthonys-iMac.local's conflicted copy 2021-07-17).cmake  cmake_install-2024-03-01-12-43-37.cmake  cmake_install.cmake  fmm2grid.c  (+19 more)
src/CMakeFiles_OLD/: CMakeDirectoryInformation.cmake  Makefile.cmake  Makefile2  TargetDirectories.txt
src/CMakeFiles_OLD/3.17.3/: CMakeCCompiler.cmake  CMakeCXXCompiler.cmake
src/CMakeFiles_OLD/3.5.2/: CMakeCCompiler.cmake  CMakeCXXCompiler.cmake
src/CMakeFiles_OLD/GRID_LIB_OBJS.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make
src/CMakeFiles_OLD/Grid2GMT.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/Grid2Time.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/GridCascadingDecimate.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make  link.txt
src/CMakeFiles_OLD/GridGraphLib.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make
src/CMakeFiles_OLD/Loc2ddct.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/Loc2ssst.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/LocSum.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/NLDiffLoc.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/NLLOC_LIB_OBJS.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make
src/CMakeFiles_OLD/NLLoc.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/NLLoc1.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make
src/CMakeFiles_OLD/PhsAssoc.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/Time2Angles.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/Time2EQ.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/Time_3d_NLL.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  flags.make
src/CMakeFiles_OLD/Vel2Grid.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/Vel2Grid3D.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/calc_crust_corr.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make
src/CMakeFiles_OLD/fmm2grid.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/fpfit2hyp.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/grid2scat.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/hypoe2hyp.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/interface2fmm.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/loclist.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make
src/CMakeFiles_OLD/mag_func_test.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/oct2grid.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/phaselist.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make
src/CMakeFiles_OLD/scat2latlon.dir/: C.includecache  DependInfo.cmake  build.make  cmake_clean.cmake  depend.internal  depend.make  link.txt
src/CMakeFiles_OLD/sphfd_SWR_NLL.dir/: C.includecache  DependInfo.cmake  build.make  depend.make  (+4 more)
src/alomax_matrix/: CMakeLists.txt  Makefile  alomax_matrix.c  alomax_matrix.h  eigv.c  polarization.c  polarization.h  test_real_symmetric_eigen.c
src/include/: GridGraphLib.h  GridLib-2024-10-07-08-50-02.h  GridLib.h  GridMemLib.h  NLLocLib.h  geo.h  map_project.h  phaseloclist.h  sphfd_SWR_NLL.h  util.h  velmod.h
src/io/: json_io.c  json_io.h
src/matrix_statistics/: CMakeLists.txt  Makefile  libcomcat_ellipse.py  matrix_statistics.c  matrix_statistics.h
src/octtree/: Makefile  octtree.c  octtree.h  ran1.h
src/ran1/: Makefile  ran1.c  ran1.h
src/vector/: Makefile
(+999 files in other folders)
